--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <div>Hello world</div>
+    <p>
+        This is some text which are written in test branch.
+    </p>
 </body>
 </html>
